# celerymon

./: .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/: zizmor.yml
.github/workflows/: ci.yml  image-build.yaml
celerymon/: __init__.py  event_watcher.py  metrics.py  redis_watcher.py  timer.py  worker_watcher.py
celerymon/cli/: __init__.py
