[project]
name = "celerymon"
version = "0.1.3"
description = ""
authors = [{ name = "Masaya Suzuki", email = "masaya@aviator.co" }]
dependencies = ["celery[redis]>=5.4.0", "prometheus-client>=0.21.0"]
readme = "README.md"
license = "MIT"
requires-python = ">= 3.12"

[project.scripts]
celerymon = 'celerymon.cli:run'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
  "celery-types>=0.22.0",
  "mypy>=1.5.1",
  "types-redis>=4.6.0.6",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["celerymon"]

[tool.ruff.lint]
select = [
  # isort
  "I001",
]

[tool.ruff.lint.isort]
known-first-party = ["celerymon"]
