[project]
name = "celerymon"
version = "0.1.9"
description = ""
authors = [
    { name = "Masaya Suzuki", email = "masaya@aviator.co" },
    { name = "Ofer Goldstein", email = "ofer@aviator.co" },
]
dependencies = [
    "celery[redis]>=5.6.3",
    "prometheus-client>=0.24.1",
]
readme = "README.md"
license = "MIT"
requires-python = ">= 3.13"

[project.scripts]
celerymon = 'celerymon.cli:run'

[dependency-groups]
dev = [
    "celery-types>=0.26.0",
    "mypy>=1.20.0",
    "pyright>=1.1.408",
    "types-redis>=4.6.0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["celerymon"]

[tool.ruff.lint]
select = [
  # Default values
  "E4",
  "E7",
  "E9",
  "F",
  # isort
  "I001",
]

[tool.ruff.lint.isort]
known-first-party = ["celerymon"]
